<resources>
    <string name="app_name">ContactRoom</string>
    <string name="name_hint">Enter Name</string>
    <string name="occupation_hint">Occupation</string>
    <string name="save_text">Save</string>
    <string name="empty">Enter Information</string>
    <string name="fab_description">Fab button description</string>
    <string name="update_button_text">Update</string>
    <string name="delete_button_text">Delete</string>
</resources>